--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,39 @@
 @import url('https://fonts.googleapis.com/css2?family=Bangers&family=Roboto:wght@100&display=swap');
 
+* {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+}
+
 body {
     font-family: Bangers, sans-serif;
     color: black;
+    /*line-height: 1.6;*/
 }
+
+ul {
+    list-style-type: none;
+}
+
+a {
+    text-decoration: none;
+    color: black;
+}
+
+h1, h2 {
+    font-weight: 300;
+    line-height: 1.2;
+    margin: 10px 0;
+}
+
+p {
+    margin: 10px 0;
+}
+
+img {
+    width: 100%;
+}
+
+
+
