--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,7 +21,8 @@ a {
     color: black;
 }
 
-h1, h2 {
+h1,
+h2 {
     font-weight: 300;
     line-height: 1.2;
     margin: 10px 0;
@@ -35,5 +36,43 @@ img {
     width: 100%;
 }
 
+/* Navbar */
 
+.navbar {
+    background-color: red;
+    color: black;
+    height: 70px;
+
+}
+
+.navbar ul {
+    display: flex;
+}
+
+.navbar a {
+    padding: 10px;
+    margin: 0 5px:
+}
+
+.navbar a:hover {
+    color: #786C44;
+}
+
+.navbar .flex {
+    justify-content: space-between;
+}
+
+.container {
+    max-width: 1100px;
+    margin: 0 auto;
+    overflow: auto;
+    padding: 0 40px;
+}
+
+.flex {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+}
 
