Add footer and styling to landing page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,7 +39,6 @@ img {
 /* Navbar */
 
 .navbar {
-    background-color: red;
     color: black;
     height: 70px;
 
@@ -84,5 +83,38 @@ img {
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
+}
+
+/* socials footer */
+
+.footer a:hover {
+    color: #786C44;
+}
+
+.ft-social {
+    padding: 0 1.875rem 1.25rem;
+}
+.ft-social-list {
+    display: flex;
+    justify-content: center;
+    border-top: 1px #777 solid; 
+    padding-top: 1.25rem;
+
+}
+.ft-social-list li {
+    margin: 0.5rem;
+    font-size: 1.25rem;
+    list-style-type: none;
+    
+}
+
+.ft-social-list li a {
+    color: inherit;
+}
+
+.ft-legal {
+    display: flex;
+    justify-content: flex-end;
+    margin: 0.125rem 0.625rem;
 }
 
