--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -95,6 +95,28 @@ label {
     display: none;
 }
 
+/* gallery page */
+
+.image-grid {
+    --gap: 16px;
+    --num-cols: 4;
+    --row-height: 300px;
+
+    box-sizing: border-box;
+    padding: var(--gap);
+
+    display: grid;
+    grid-template-columns: repeat(var(--num-cols), 1fr);
+    grid-auto-rows: var(--row-height);
+    gap: var(--gap);
+}
+
+.image-grid>img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
 /* socials footer */
 
 .footer a:hover {
@@ -104,18 +126,20 @@ label {
 .ft-social {
     padding: 0 1.875rem 1.25rem;
 }
+
 .ft-social-list {
     display: flex;
     justify-content: center;
-    border-top: 1px #777 solid; 
+    border-top: 1px #777 solid;
     padding-top: 1.25rem;
 
 }
+
 .ft-social-list li {
     margin: 0.5rem;
     font-size: 1.25rem;
     list-style-type: none;
-    
+
 }
 
 .ft-social-list li a {
@@ -129,7 +153,8 @@ label {
 }
 
 /* Small devices under 500px */
-@media only screen and (max-width: 500px) {
+@media (max-width: 500px) {
+
     label {
         display: block;
         cursor: pointer;
@@ -146,10 +171,38 @@ label {
         /*border-bottom: 1px solid black;*/
     }
 
-    #toggle:checked ~ #menu {
+    #toggle:checked~#menu {
         display: flex;
         flex-direction: column;
         align-items: flex-start;
         /*flex-grow: 3;
         text-align: left;*/
-        }
+    }
+
+    .image-grid {
+        --num-cols: 2;
+        --row-height: 200px;
+
+    }
+
+} 
+
+
+
+/* Medium devices (tablets and up) */
+@media (min-width: 501px) and (max-width: 768px) { 
+
+    .image-grid {
+        --num-cols: 3;
+        --row-height: 200px
+    }
+
+}
+
+/* Large devices (desktops, 992px and up) */
+@media (min-width: 992px) { 
+    .image-grid {
+        --num-cols: 5;
+        --row-height: 300px
+    }
+}
