--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,10 +62,10 @@ img {
 }
 
 .container {
-    max-width: 1100px;
+    max-width: 1500px;
     margin: 0 auto;
     overflow: auto;
-    padding: 0 40px;
+    padding: 0 10px;
 }
 
 .flex {
@@ -119,6 +119,10 @@ label {
 
 /* socials footer */
 
+.footer-landing {
+    background-color: red;
+}
+
 .footer a:hover {
     color: #786C44;
 }
@@ -152,6 +156,10 @@ label {
     margin: 0.125rem 0.625rem;
 }
 
+.footer-landing {
+    /*background-color: red;*/
+}
+
 /* Small devices under 500px */
 @media (max-width: 500px) {
 
@@ -164,6 +172,7 @@ label {
         text-align: center;
         width: 100%;
         display: none;
+    
     }
 
     #menu a {
@@ -179,11 +188,26 @@ label {
         text-align: left;*/
     }
 
+    #header {
+        align-items: unset;
+        flex-direction: row-reverse;
+    }
+
     .image-grid {
         --num-cols: 2;
         --row-height: 200px;
 
     }
+
+    .ft-social-list {
+
+    }
+
+    
+        
+        
+    
+
 
 } 
 
