Fix error causing nav links to disable & add background image to images folder

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -203,13 +203,18 @@ label {
 
     }
 
-    
-        
-        
-    
-
 
 } 
+
+/* About Page */
+
+.background-about {
+    height: 100vh;
+    background-image: url(../images/background\ about\ page.jpg);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
 
 
 
