--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -156,9 +156,7 @@ label {
     margin: 0.125rem 0.625rem;
 }
 
-.footer-landing {
-    /*background-color: red;*/
-}
+
 
 /* Small devices under 500px */
 @media (max-width: 500px) {
@@ -210,7 +208,7 @@ label {
 
 .background-about {
     height: 100vh;
-    background-image: url(../images/background\ about\ page.jpg);
+    background-image: url(../images/Background-about-page-desktop.jpg);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
