--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,11 +68,22 @@ img {
     padding: 0 10px;
 }
 
+
 .flex {
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100%;
+}
+
+.grid {
+    display: grid;
+    grid-template-columns: 300px 500px;
+    gap: 10px;
+    justify-content: space-around;
+    align-items: center;
+    height: 100%;
+
 }
 
 /* Hero Image */
@@ -115,6 +126,16 @@ label {
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
+
+/* About Page */
+
+.background-about {
+    height: 100vh;
+    background-image: url(../images/Background-about-page-desktop.jpg);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 /* socials footer */
@@ -203,16 +224,6 @@ label {
 
 
 } 
-
-/* About Page */
-
-.background-about {
-    height: 100vh;
-    background-image: url(../images/Background-about-page-desktop.jpg);
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-}
 
 
 
