--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,6 +29,7 @@ h2 {
 }
 
 p {
+    font-family: Roboto, sans-serif;
     margin: 10px 0;
 }
 
@@ -60,6 +61,9 @@ img {
 .navbar .flex {
     justify-content: space-between;
 }
+
+
+/* utilities*/
 
 .container {
     max-width: 1500px;
@@ -136,6 +140,16 @@ label {
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
+}
+
+/* Craig*/
+
+.craig {
+    height: 400px;
+    background-color: rgba(0, 0, 0, 0.2);
+    position: relative;
+    font-weight: 50px;
+
 }
 
 /* socials footer */
