--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,6 +72,35 @@ img {
     padding: 0 10px;
 }
 
+.card {
+    background-color:#CBE0E8;
+    color: black;
+    /* border-radius: 10px;*/
+    box-shadow: 0 3px 10px rgba(0,0,0, 0.2);
+    padding: 40px;
+    margin: 20px;
+}
+
+.btn1 {
+    display: inline-block;
+    padding: 10px 30px;
+    cursor: pointer;
+    color: black;
+    background-color: #CBE0E8;
+    border: 1px;
+    border-radius: 2px;
+
+}
+
+.btn-outline {
+    background-color: #CBE0E8;
+    border: 1px black solid;
+}
+
+.btn1:hover {
+    transform: scale(0.98);
+}
+
 
 .flex {
     display: flex;
@@ -89,6 +118,7 @@ img {
     height: 100%;
 
 }
+
 
 /* Hero Image */
 
