--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,7 +51,7 @@ img {
 
 .navbar a {
     padding: 10px;
-    margin: 0 5px:
+    margin: 0 5px;
 }
 
 .navbar a:hover {
@@ -262,9 +262,7 @@ label {
 
     }
 
-    .ft-social-list {
 
-    }
 
 
 } 
