--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,14 +14,14 @@ body {
     /*line-height: 1.6;*/
 }
 
-html,
+/*html,
 body {
     background: url("../images/Hero_Image_1.jpg") no-repeat center center fixed;
     -webkit-background-size: 100%;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
-}
+} */
 
 ul {
     list-style-type: none;
@@ -136,7 +136,6 @@ img {
 
 .hero {
     height: 100vh;
-    width: 100vw;
     background-image: url(../images/Hero_Image_1.jpg);
     background-position: center;
     background-size: cover;
