Add contact page, background image and styling

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -206,6 +206,14 @@ label {
     margin-bottom: 40px;
 }
 
+.bg-contact {
+    height: 100vh;
+    background-image: url(../images/background-image-contact-3.jpg);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
 /* socials footer */
 
 .footer-landing {
