--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,16 +102,19 @@ img {
     background-color: #CBE0E8;
     border: 1px;
     border-radius: 2px;
+    transition: 500ms ease all;
 
 }
 
 .btn-outline {
     background-color: #CBE0E8;
-    border: 1px black solid;
+    border: none;
 }
 
 .btn1:hover {
+    background-color:#6bbedf ;
     transform: scale(0.98);
+
 }
 
 
@@ -239,8 +242,6 @@ label {
     display: flex;
     justify-content: center;
     align-items: center;
-    
-
 }
 
 .contact-top {
@@ -255,10 +256,20 @@ label {
     flex-direction: column;
 }
 
-.contact-form h2 {
+.contact-form h3 {
     font-weight: 100;
     text-align: center;
     margin-bottom: 5%;
+}
+
+.contact-form p {
+    text-align: center;
+    margin: 0;
+    padding: 0;
+}
+
+form {
+    margin-top: 20px;
 }
 
 .input-wrap {
@@ -267,6 +278,45 @@ label {
     margin-bottom: 2%;
 }
 
+textarea {
+    font-family: sans-serif;
+    font-size: 14px;
+    font-weight: 500;
+    padding: 4px 0;
+    width: 100%;
+    border: none;
+    border-bottom: 1px solid #d1ccbd ;
+    transition: 500ms ease all; 
+}
+
+.input-wrap button {
+
+    
+}
+
+input {
+    font-size: 14px;
+    font-weight: 500;
+    padding: 4px 0;
+    width: 100%;
+    border: none;
+    border-bottom: 1px solid #d1ccbd ;
+    transition: 500ms ease all;
+
+}
+
+input:focus {
+    outline: none;
+    box-shadow: 0 1px 0 0 #786C44;
+    border-color: #786C44 ;
+}
+
+textarea:focus {
+    outline: none;
+    box-shadow: 0 1px 0 0 #786C44;
+    border-color: #786C44 ;
+
+}
 /* socials footer */
 
 .footer-landing {
@@ -350,6 +400,10 @@ label {
     .grid {
         grid-template-columns: 1fr;
         grid-template-rows: 1fr;
+    }
+
+    .contact-top {
+        width: 300px;
     }
 
 
