--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -263,6 +263,7 @@ label {
 }
 
 .contact-form p {
+    font-size: 10px;
     text-align: center;
     margin: 0;
     padding: 0;
@@ -401,6 +402,12 @@ textarea:focus {
         width: 300px;
         margin-top: 50px;
     }
+
+    .bg-contact {
+        background-image: url(../images/background-image-iphone-2.jpg);
+    }
+
+
 
 
 
