--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -242,6 +242,7 @@ label {
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: #f2f2f2;
 }
 
 .contact-top {
