--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -415,6 +415,16 @@ textarea:focus {
 
 }
 
+@media all and (orientation:landscape) {
+    .bg-contact {
+        height: 100vh;
+        background-image: url(../images/Bg-contact-desktop.jpg);
+        background-position: center;
+        background-size: cover;
+        background-repeat: no-repeat;
+    }
+}
+
 
 
 /* Medium devices (tablets and up) */
