Embed videos to learn page and style

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -241,6 +241,15 @@ label {
     padding: var(--gap);
 
     display: grid;
+    grid-template-columns: repeat(var(--num-cols), 1fr);
+    grid-auto-rows: var(--row-height);
+    gap: var(--gap);
+
+}
+
+.video-grid > iframe {
+    width: 100%;
+    height: 100%;
 }
 
 /* Contact Page */
